# avmo

./: CMakeLists.txt  README.md
1+ Gauss on fraction/: Fraction.cpp  Fraction.h  gauss_input.txt  gauss_output.txt  lab1plus.cpp
1+ Gausse on fraction/: drobsmesh.h  gauss.cpp  gauss_input.txt  gauss_output.txt  main.cpp  resdrob.cpp  resdrob.h
1+ Gausse on fraction/test/: drob.cpp  drob.h  gauss.cpp
1. Gauss/: gauss.cpp  gauss_input.txt  gauss_output.txt
2+ Fraction/: Fraction.cpp  Fraction.h  drob.cpp  drob.h  drobsmesh.cpp  fract_main.cpp  main.cpp  smeshdrob.cpp  smeshdrob.h
2. Determinant/: determinant.cpp  input.txt
3. Chart f(y)=x^2/: YequalsXdegree2.java
4. Simplex/: Fraction.h  Simplex.cpp  simplex.txt
5. SimplexUP/: Fraction.cpp  Simplex2.cpp  simplex2.txt
